# RTMP_Android

./: .gitmodules  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/cn/aisaka/androidffmpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/cn/aisaka/androidffmpeg/: MainActivity.kt  RTMPActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/test/java/cn/aisaka/androidffmpeg/: ExampleUnitTest.kt
ffmpeg/: CMakeLists.txt  build.gradle
ffmpeg/src/androidTest/java/cn/aisaka/ffmpeg/: ExampleInstrumentedTest.kt
ffmpeg/src/main/java/cn/aisaka/ffmpeg/test/: FFmpegNative.kt
ffmpeg/src/main/jni/: FFmpegVersion.c
ffmpeg/src/test/java/cn/aisaka/ffmpeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
rtmp_hardcodec/: CMakeLists.txt  build.gradle
rtmp_hardcodec/src/androidTest/java/cn/aisaka/rtmp_hardcodec/: ExampleInstrumentedTest.kt
rtmp_hardcodec/src/main/cpp/: RTMPHandle.c
rtmp_hardcodec/src/main/java/cn/aisaka/rtmp_hardcodec/: ConvertUtils.kt  OnRTMPStateChangeListener.kt  RTMPHandle.kt  YuvFrame.kt  YuvHelper.kt
rtmp_hardcodec/src/main/res/values/: strings.xml
rtmp_hardcodec/src/main/res/values-night/: themes.xml
rtmp_hardcodec/src/test/java/cn/aisaka/rtmp_hardcodec/: ExampleUnitTest.kt
